nav bar admin guest member dan add notes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@
 }
 
 .bgcard-art{
-    background: #363636; 
+    background: #363636;
     width: 300px;
     height: 340px;
     border-radius: 7px;
@@ -108,7 +108,7 @@
     height: 40px;
 }
 .box-add{
-    border-style: groove;   
+    border-style: groove;
 }
 .search{
     background-color: white;
@@ -133,4 +133,7 @@
     width: 200px;
     height: 40px;
     border-radius: 10px;
+}
+.bg-dropdown{
+    background-color: #444444;
 }
