--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,10 @@
 .card-daftar{
     width: 450px;
 }
-
+.greet{
+    color: white;
+    font-size: larger;
+}
 .btn-daftar{
     background: #363636;
 }
@@ -83,6 +86,9 @@
     background-color: #EEEEEE;
     border-radius: 15px;
 }
+.box-quantity{
+    width: 240px;
+}
 .box-deskripsi{
     min-width: 40vw;
     min-height: 80vh;
@@ -93,8 +99,8 @@
     font-size: small;
     background: #363636;
     border-radius: 10px;
-    width: 200px;
-    height: 40px;
+    width: 230px;
+    height: 45px;
 }
 .btn-beli-langsung{
     background-color: white;
@@ -104,12 +110,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    height: 40px;
+    width: 230px;
+    height: 45px;
 }
-.box-add{
-    border-style: groove;
-}
+
 .search{
     background-color: white;
     min-width: 40vw;
@@ -120,7 +124,11 @@
     align-items: center;
 }
 .quantity{
-    width: 25px;
+    width: 65px;
+}
+
+input[type=number]::-webkit-inner-spin-button{
+   opacity: 1;
 }
 .btn-diskusi{
     background-color: #444444;
