tambah produk, daftar produk, detail produk, perbarui & hapus produk, homepage DONE

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,106 +1,125 @@
-.bg-login{
+.bg-login {
     min-height: 100vh;
     min-width: 100vw;
 }
-.card-login{
-    width: 450px;
-}
-.btn-masuk{
-    background: #363636;
-}
-.bg-daftar{
-    min-height: 100vh;
-    min-width: 100vw;
-}
-.card-daftar{
+
+.card-login {
     width: 450px;
 }
 
-.card-unggah-lukisan{
+.btn-masuk {
+    background: #363636;
+}
+
+.bg-daftar {
+    min-height: 100vh;
+    min-width: 100vw;
+}
+
+.card-daftar {
+    width: 450px;
+}
+
+.card-unggah-lukisan {
     width: 1300px;
 }
 
-.greet{
+.greet {
     color: white;
     font-size: larger;
 }
 
-.btn-daftar{
+.btn-daftar {
     background: #363636;
 }
-.bg-header{
+
+.bg-header {
     min-width: 100vw;
     background: #363636;
 }
-.bg-home{
+
+.bg-home {
     background-image: url("../asset/bg-home.jpg");
     min-height: 85vh;
     min-width: 100vw;
     background-position: center;
     background-size: cover;
 }
-.btn-lihat{
+
+.btn-lihat {
     border-radius: 10px;
     height: 50px;
     width: 130px;
 }
-.txt-tgldiskon{
+
+.txt-tgldiskon {
     color: #8E8E8E;
 }
-.section-footer{
+
+.section-footer {
     background: #363636;
-    padding:20px 50px 20px;
-    font-size: small;;
+    padding: 20px 50px 20px;
+    font-size: small;
+    ;
     min-width: 100vw;
 }
 
-.bgcard-art{
+.bgcard-art {
     background: #363636;
     width: 300px;
     height: 340px;
     border-radius: 7px;
     font-size: x-large;
 }
-.card-art{
+
+.card-art {
     width: 280px;
     height: 280px;
     margin: 20px 30px 20px 0px;
     border-radius: 7px;
     background-color: white;
 }
-.card-art2{
+
+.card-art2 {
     width: 330px;
     height: 350px;
     margin: 0px 30px 20px 0px;
     border-radius: 7px;
 }
-.box-card{
+
+.box-card {
     position: absolute;
     margin: 10px 0px 0px 180px;
 }
-.art{
+
+.art {
     width: 670px;
     height: 720px;
 }
-.tampilan-lukisan{
+
+.tampilan-lukisan {
     width: 120px;
     height: 120px;
 }
-.box-stock{
+
+.box-stock {
     min-width: 40vw;
     min-height: 23vh;
     background-color: #EEEEEE;
     border-radius: 15px;
 }
-.box-quantity{
+
+.box-quantity {
     width: 240px;
 }
-.box-deskripsi{
+
+.box-deskripsi {
     min-width: 40vw;
     min-height: 80vh;
     background-color: #EEEEEE;
     border-radius: 15px;
 }
+
 .btn-tambah-keranjang {
     font-size: small;
     background: #363636;
@@ -108,7 +127,8 @@
     width: 230px;
     height: 45px;
 }
-.btn-beli-langsung{
+
+.btn-beli-langsung {
     background-color: white;
     font-size: small;
     border-radius: 10px;
@@ -120,7 +140,7 @@
     height: 45px;
 }
 
-.search{
+.search {
     background-color: white;
     min-width: 40vw;
     min-height: 8vh;
@@ -129,37 +149,53 @@
     justify-content: center;
     align-items: center;
 }
-.quantity{
+
+.quantity {
     width: 65px;
 }
 
-input[type=number]::-webkit-inner-spin-button{
-   opacity: 1;
+input[type=number]::-webkit-inner-spin-button {
+    opacity: 1;
 }
-.btn-diskusi{
+
+.btn-diskusi {
     background-color: #444444;
     width: 200px;
     height: 40px;
     border-radius: 10px;
 }
-.btn-ulasan{
+
+.btn-ulasan {
     background-color: #444444;
     width: 200px;
     height: 40px;
     border-radius: 10px;
 }
-.bg-dropdown{
+
+.bg-dropdown {
     background-color: #444444;
 }
-.bg-isi{
+
+.bg-isi {
     background-color: #DFE0E0;
     min-width: 90.5vw;
     min-height: 100vh;
 }
-.btn-jadi-member{
+
+.btn-jadi-member {
     background-color: #363636;
     width: 200px;
     height: 40px;
     border-radius: 10px;
 }
 
+.myCaraousel {
+    width: 600px;
+    height: 400px;
+}
+
+.myCaraousel .carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
