--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,3 +205,25 @@ input[type=number]::-webkit-inner-spin-button {
 .peringatan {
     font-size: x-small;
 }
+
+.star-rating {
+    position: absolute;
+    align-items: center;
+    transform: rotateY(180deg);
+    display: flex;
+}
+
+.star-rating input[type="radio"] {
+    display: none;
+}
+
+.star-rating label {
+    color: #aaa;
+    font-size: 24px;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.star-rating input[type="radio"]:checked~label {
+    color: gold;
+}
